# CostReporter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ADDING_PROVIDERS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CLOUD_PROVIDER_INTEGRATION.md  COMPLETE_PRODUCT_VISION.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CUSTOM_PROVIDERS.md  Cargo.toml  DUAL_USAGE_GUIDE.md  EXTENDED_SESSION_FINAL_SUMMARY.md  FEATURES_ROADMAP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  MULTI_CHANNEL_CLAUDE_COSTS.md  Makefile  NEXT_STEPS_PRIORITIZATION.md  OPENTELEMETRY_INTEGRATION.md  README.md  RELEASE_NOTES_v0.9.0.md  RESEARCH_ROADMAP.md  ROADMAP.md  ROADMAP_HONEST.md  ROADMAP_PRIORITIZED.md  SKILL_PUBLISHING_GUIDE.md  TOKEN_COUNTER_INTEGRATION_STRATEGY.md  VISION.md  claude_cost_report.py  claude_skill_definition.json  demo_token_counter.html  openapi.json  pyproject.toml  requirements-lock.txt  skills_manifest.json
.github/workflows/: ci.yml
crates/beacon-core/: Cargo.toml
crates/cost-reporter/src/: cost_tracker.rs  lib.rs  mcp_profiler.rs  pricing_service.rs  provider_integrations.rs  types.rs
examples/: demo_claude_code_tracking.py  quick_start.py
pycostaudit/: __init__.py  cli_interactive.py  compliance_reporting.py  cost_calculator.py  interactive_guide.py  ml_forecasting_service.py  multi_org_manager.py  observability_export.py  user_context.py
pycostaudit/dashboard/: README.md  app.py  errors.py  logging_setup.py  schemas.py
pycostaudit/dashboard/frontend/: App.jsx  Dashboard.jsx  LoginPage.jsx  index.css  package.json
pycostaudit/dashboard/frontend/public/: index.html
python/: Cargo.toml
python/src/: __init__.py  lib.rs
python/src/pycost_reporter/: __init__.py
pytokencalc/: __init__.py  config.py  cost_calculator.py  database.py  error_messages.py  exceptions.py  okf_token_baselines.py  persistence.py  quick_cli.py
pytokencalc/tokenizers/: __init__.py  anthropic_counter.py  azure_openai_counter.py  cohere_counter.py  custom_provider_counter.py  google_counter.py  local_inference_counter.py  ollama_counter.py  opensource_counter.py  registry.py
tests/: test_accuracy_verification.py  test_cost_models_v6.py  test_multi_org.py  test_new_providers.py  test_observability.py  test_quick_cli.py  test_token_counter.py
