[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin.build"

[project]
name = "pytokencalc"
version = "0.5.0"
description = "Multi-API LLM cost calculation core. Unified cost tracking across 20+ cloud providers and 10+ open-source APIs. The cost foundation for OpenAnchor and autonomous agent frameworks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
maintainers = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = [
    "llm",
    "cost-calculation",
    "cost-tracking",
    "token-counting",
    "multi-provider",
    "budget-enforcement",
    "anthropic",
    "openai",
    "google",
    "groq",
    "deepinfra",
    "api-costs",
    "ai-cost-management",
    "usage-tracking",
    "openanchor"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "sqlalchemy==2.0.23",
    "pydantic==2.4.2",
    "pydantic[email]==2.4.2",
    "pandas==2.1.0",
    "reportlab==4.0.7",
    "openpyxl==3.11.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "mypy==1.7.0",
    "black==23.12.0",
    "ruff==0.1.8",
]

postgres = [
    "psycopg2-binary==2.9.9",
]

[project.urls]
Homepage = "https://github.com/Mullassery/PyCostAudit"
Repository = "https://github.com/Mullassery/PyCostAudit"
"Bug Tracker" = "https://github.com/Mullassery/PyCostAudit/issues"
Documentation = "https://github.com/Mullassery/PyCostAudit#readme"
Changelog = "https://github.com/Mullassery/PyCostAudit/releases"
"Source Code" = "https://github.com/Mullassery/PyCostAudit/tree/main"
Discussions = "https://github.com/Mullassery/PyCostAudit/discussions"

[tool.maturin]
module-name = "pytokencalc._core"
manifest-path = "python/Cargo.toml"
python-source = "python/src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
